v0.17.0/_sources/_generated/groups/regions.rst.txt
Regions
=======

This section details Region-related Linode CLI commands.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON
.. _commands_regions_list:

`list <https://techdocs.akamai.com/linode-api/reference/get-regions>`_
----------------------------------------------------------------------


Lists the Regions available for Linode services.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli regions list






.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Filterable Attributes

.. rst-class:: action-subheading-description

Arguments used to define a filter for response entries.




.. rst-class:: action-filterable-field-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`\-\-country`
      - :action-table-field-type:`str`
      - The country where this Region resides.

    * - :action-table-field-name:`\-\-site-type`
      - :action-table-field-type:`str`
      - This region's site type.






.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`capabilities` 
      - :action-table-field-type:`[]str`
      - :action-table-field-example:`["Linodes", "...ent Groups"]`
      - A list of capabilities of this region.

    * - :action-table-field-name:`country` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us`
      - The country where this Region resides.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east`
      - The unique ID of this Region.

    * - :action-table-field-name:`label` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`Newark, NJ, USA`
      - Detailed location information for this Region, including city, state or region, and country.

    * - :action-table-field-name:`site-type` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`core`
      - This region's site type.

    * - :action-table-field-name:`status` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`ok`
      - This region's current operational status.




.. _commands_regions_list_attribute_sections_placement_group_limits:

.. rst-class:: action-section-header

placement_group_limits


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`placement_group_limits.maximum_linodes_per_pg` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`5`
      - The maximum number of compute instances you can include in a single placement group in this region.

    * - :action-table-field-name:`placement_group_limits.maximum_pgs_per_customer` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`10`
      - The maximum number of placement groups you can have in this region.




.. _commands_regions_list_attribute_sections_resolvers:

.. rst-class:: action-section-header

resolvers


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`resolvers.ipv4` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`192.0.2.0,192.0.2.1`
      - The IPv4 addresses for this region's DNS resolvers, separated by commas.

    * - :action-table-field-name:`resolvers.ipv6` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2001:0db8::,2001:0db8::1`
      - The IPv6 addresses for this region's DNS resolvers, separated by commas.








------------

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON
.. _commands_regions_view:

`view <https://techdocs.akamai.com/linode-api/reference/get-region>`_
---------------------------------------------------------------------


Returns a single Region.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli regions view us-east




.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`regionId`
      - :action-table-field-type:`str`
      - ID of the Region to look up.








.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`capabilities` 
      - :action-table-field-type:`[]str`
      - :action-table-field-example:`["Linodes", "...ent Groups"]`
      - A list of capabilities of this region.

    * - :action-table-field-name:`country` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us`
      - The country where this Region resides.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east`
      - The unique ID of this Region.

    * - :action-table-field-name:`label` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`Newark, NJ, USA`
      - Detailed location information for this Region, including city, state or region, and country.

    * - :action-table-field-name:`site-type` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`core`
      - This region's site type.

    * - :action-table-field-name:`status` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`ok`
      - This region's current operational status.




.. _commands_regions_view_attribute_sections_placement_group_limits:

.. rst-class:: action-section-header

placement_group_limits


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`placement_group_limits.maximum_linodes_per_pg` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`5`
      - The maximum number of compute instances you can include in a single placement group in this region.

    * - :action-table-field-name:`placement_group_limits.maximum_pgs_per_customer` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`10`
      - The maximum number of placement groups you can have in this region.




.. _commands_regions_view_attribute_sections_resolvers:

.. rst-class:: action-section-header

resolvers


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`resolvers.ipv4` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`192.0.2.0,192.0.2.1`
      - The IPv4 addresses for this region's DNS resolvers, separated by commas.

    * - :action-table-field-name:`resolvers.ipv6` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2001:0db8::,2001:0db8::1`
      - The IPv6 addresses for this region's DNS resolvers, separated by commas.








------------

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON
.. _commands_regions_list-avail:

`list-avail <https://techdocs.akamai.com/linode-api/reference/get-regions-availability>`_
-----------------------------------------------------------------------------------------


Returns availability data for all Regions.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli regions list-avail






.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Filterable Attributes

.. rst-class:: action-subheading-description

Arguments used to define a filter for response entries.




.. rst-class:: action-filterable-field-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`\-\-available`
      - :action-table-field-type:`bool`
      - Whether the compute instance type is available in the region.

    * - :action-table-field-name:`\-\-plan`
      - :action-table-field-type:`str`
      - The compute instance `Type <https://techdocs.akamai.com/linode-api/reference/get-linode-types>`_ ID.

    * - :action-table-field-name:`\-\-region`
      - :action-table-field-type:`str`
      - The `Region <https://techdocs.akamai.com/linode-api/reference/get-regions>`_ ID.






.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`available` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - Whether the compute instance type is available in the region.

    * - :action-table-field-name:`plan` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`gpu-rtx6000-1.1`
      - The compute instance `Type <https://techdocs.akamai.com/linode-api/reference/get-linode-types>`_ ID.

    * - :action-table-field-name:`region` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east`
      - The `Region <https://techdocs.akamai.com/linode-api/reference/get-regions>`_ ID.









.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON
.. _commands_regions_view-avail:

`view-avail <https://techdocs.akamai.com/linode-api/reference/get-region-availability>`_
----------------------------------------------------------------------------------------


Returns availability data for a single Region.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli regions view-avail us-east




.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`regionId`
      - :action-table-field-type:`str`
      - ID of the Region to look up.








.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`available` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - Whether the compute instance type is available in the region.

    * - :action-table-field-name:`plan` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`gpu-rtx6000-1.1`
      - The compute instance `Type <https://techdocs.akamai.com/linode-api/reference/get-linode-types>`_ ID.

    * - :action-table-field-name:`region` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east`
      - The `Region <https://techdocs.akamai.com/linode-api/reference/get-regions>`_ ID.









